--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -50,7 +50,7 @@ p {
 
 .hero-section {
     position: relative; 
-    background-image: url('/img/header.jpg'); 
+    background-image: url('img/header.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
